поправлены баги, финальная версия + документы